Fix sticky nav on mobile

--- a/blocks/sticky-navigation/sticky-navigation.css
+++ b/blocks/sticky-navigation/sticky-navigation.css
@@ -9,20 +9,32 @@
   justify-content: center;
   align-items: baseline;
   box-shadow: 0 3px 6px 0 rgb(0 0 0 / 8%);
-  padding: var(--body-padding);
+  padding: 0 var(--body-padding) var(--body-padding) var(--body-padding);
+}
+
+.sticky-navigation ul {
+  flex-direction: column;
+  width: 100%;
+  padding: 0;
+  margin:0;
+  list-style-type: none;
 }
 
 .sticky-navigation ul li a {
   display: block;
-  font-weight: var(--font-weight-regular);
+  font-weight: var(--font-weight-bold);
+  font-size: var(--body-font-size-xs);
   line-height: normal;
   color: #3c3c3c;
   transition: color .3s ease-in-out;
   text-decoration:none;
+  padding: 22px 0;
 }
 
 .sticky-navigation ul li {
   border-bottom: 1px solid #dedede;
+  padding: 0;
+  margin: 0;
 }
 
 .sticky-navigation ul li.active::after {
@@ -38,20 +50,17 @@
   transition: width .3s ease-in-out;
 }
 
-.sticky-navigation ul {
-  flex-direction: column;
-  width: 100%;
-  padding: 0 20px;
-  margin:0;
-  list-style-type: none;
-}
-
 .sticky-navigation .mobile-dropdown {
   font-weight: var(--font-weight-bold);
-  padding: 24px 20px;
+  font-size: var(--body-font-size-xs);
+  padding: 22px 20px;
   color: #000;
   display: flex;
   border-bottom: 1px solid #dedede;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: left;
 }
 
 .sticky-navigation .mobile-dropdown::after {
@@ -76,7 +85,8 @@
 }
 
 .mobile-dropdown.opened + .menu-with-button {
-  display: flex
+  display: flex;
+  background-color: #fff;
 }
 
 .sticky-navigation.fixed-nav {
@@ -99,10 +109,11 @@
   padding: 6px 15px;
 }
 
-@media (min-width: 990px) { /* desktop */
+@media (min-width: 992px) { /* desktop */
 
   .sticky-navigation {
     border-bottom: 1px solid #dedede;
+    min-height: 56px;
   }
 
   .sticky-navigation .menu-with-button {
@@ -125,6 +136,12 @@
     margin-right: 20px;
   }
 
+  .sticky-navigation ul li a {
+    font-size: var(--body-font-size-s);
+    line-height: 1;
+    padding: 25px 0;
+  }
+
   .sticky-navigation .mobile-dropdown {
     display: none;
   }
@@ -136,9 +153,6 @@
 }
 
 @media (min-width: 1600px) { /* large desktop */
-  .sticky-navigation ul li a {
-    font-size: var(--body-font-size-xs);
-  }
 
   .sticky-navigation .button-container a {
     font-size: var(--body-font-size-xs);
